an update of task 6

--- a/6/static/style.css
+++ b/6/static/style.css
@@ -8,7 +8,10 @@ body{
     color: rgb(78, 78, 209);
 }
 
-
+div {
+  color: brown;
+  font-size: 80pt;
+}
 
 button{
    background-color: rgb(8, 201, 156);
