--- a/6/views/index.html
+++ b/6/views/index.html
@@ -8,7 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body id="body">
+    <div>Hi</div>
     <button id="button" onclick="flipFunc()" >click here</button>
 </body>
 </html>
