this is for task 8

--- a/8/views/index.html
+++ b/8/views/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
-    <link rel="stylrsheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>hi node js</h1>
-    <button onclick="timefunc()"> what time</button>
-    <div id = timediv> </div>
+    <h1>SIGN UP</h1>
+    <form action="/formA" method="get">
+        <label for="UserName">Please enter your name:</label>
+        <input type="text" name="UserName" required>
+        <label for="UserEmail">Please enter your email:</label>
+        <input type="email" name="UserEmail" required>
+        <input type="time" name="GoodTime" id="">
+        <input type="submit" value="SIGN UP">
+    </form>
+    <a href="/selctAllUsers">search for all users</a>
+
+    
 </body>
 </html>
